"Updated HTML elements and button onclick attributes in Cyber.html"

--- a/Cyber/Cyber.html
+++ b/Cyber/Cyber.html
@@ -236,8 +236,8 @@ Permet de scanner les port (<strong style="font-size: 1.5em;">N</strong><span st
             <button onclick="testInputCesar('inputMCesar')">Chiffrer</button><br>
             test ==> <br>
             
-            <span id="outputCesar0"></span><span id="outputCesar">Texte</span><br>
-            <button onclick="testInputCesar2()">déhiffrer</button><br>
+            <span id="outputCesarSpe"><span id="outputCesar0"></span><span id="outputCesar">Texte</span></span><br>
+            <button onclick="testInputCesar2('inputMCesar','outputCesarSpe')">déhiffrer</button><br>
             Décryptée : <div id="outputCesar2" style="display: inline">Texte</div><br>
         </div>
         <br>
