MDN compatibility upgrade. "Updated HTML structure and formatting in Cyber.html and Le_Site_De_Raykesh.html files." On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   Cyber/Cyber.html
	modified:   Le_Site_De_Raykesh.html

--- a/Le_Site_De_Raykesh.html
+++ b/Le_Site_De_Raykesh.html
@@ -32,7 +32,7 @@
         <ul>
             <li> Mes Projet </li>
             <li> Curriculum vitæ </li>
-            <a href= "AboutMe.html" title="About Me" rel="noopener noreferrer" ><li> About Me </li></a>
+            <li><a href= "AboutMe.html" title="About Me" rel="noopener noreferrer" > About Me </a></li>
         </ul>
          
 
