--- a/Cyber/Cyber.html
+++ b/Cyber/Cyber.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/x-icon" href="./../images/iconeDeBase.ico?">
     <meta name="author" content="Raykesh" />
     <meta name="keywords" content="Cyber">
+    <title>Cyber</title>
     <link rel="stylesheet" href="styleCyber.css">
     <style>
         /* A terme, il faudra le placer dans un fichier Css à part  */
@@ -85,10 +86,10 @@
         </div>
         <!-- ul>(a>li)*3 -->
         <ul>
-            <a href="../Le_Site_De_Raykesh.html"    rel="noopener noreferrer" title="Page Principale">                                <li> Home      </li></a>
-            <a href="Blue Team\BlueTeam.html"       rel="noopener noreferrer" title="Page Blue Team ">                                <li> Blue Team </li></a>
-            <a href= "Red Team\RedTeam.html"        rel="noopener noreferrer" title="Page Red  Team ">                                <li> Red  Team </li></a>
-            <a href= "Cyber.html"                   rel="noopener noreferrer" title="êtes vous sûr?êtes vous sûr de vouloir cliquer?"><li>   Cyber   </li></a>
+            <li><a href="../Le_Site_De_Raykesh.html"    rel="noopener noreferrer" title="Page Principale">                                 Home      </a></li>
+            <li><a href="Blue Team\BlueTeam.html"       rel="noopener noreferrer" title="Page Blue Team ">                                 Blue Team </a></li>
+            <li><a href= "Red Team\RedTeam.html"        rel="noopener noreferrer" title="Page Red  Team ">                                 Red  Team </a></li>
+            <li><a href= "Cyber.html"                   rel="noopener noreferrer" title="êtes vous sûr?êtes vous sûr de vouloir cliquer?">   Cyber   </a></li>
         </ul>
         
         
@@ -241,6 +242,7 @@ Permet de scanner les port (<strong style="font-size: 1.5em;">N</strong><span st
             Décryptée : <div id="outputCesar2" style="display: inline">Texte</div><br>
         </div>
         <br>
+        <label for="TestTexteArea">.</label>
         <textarea name="Exemple" id="TestTexteArea" cols="30" rows="10">TODO</textarea><br>
 
         <h3 id="Item3">Item 3</h3>    
