--- a/Cyber/Cyber.html
+++ b/Cyber/Cyber.html
@@ -241,6 +241,19 @@ Permet de scanner les port (<strong style="font-size: 1.5em;">N</strong><span st
             Décryptée : <div id="outputCesar2" style="display: inline">Texte</div><br>
         </div>
         <br>
+        <div><br>
+          avant on avait un charset très court (abc...xyz), or là on a ...<br>
+          Chiffrement de césar : <br>
+            <input type="number" id="" placeholder="Entrer le MDP (nombre de décallage)" value="0"><br>
+    
+            <button onclick="">Chiffrer</button><br>
+            test ==> <br>
+            
+            <span id=""><span id=""></span><span id="">Texte</span></span><br>
+            <button onclick="">déhiffrer</button><br>
+            Décryptée : <div id="" style="display: inline">Texte</div><br>
+        </div>
+        <br>
         <textarea name="Exemple" id="TestTexteArea" cols="30" rows="10">TODO</textarea><br>
 
         <h3 id="Item3">Item 3</h3>    
@@ -409,6 +422,16 @@ Permet de scanner les port (<strong style="font-size: 1.5em;">N</strong><span st
         }
         </script>
 </body>
+
+
+
+
+
+
+
+
+
+
 </html>
         <script type="module" src="./utf8StringToSha256Hash.js">
         </script>
