--- a/Cyber/Cyber.html
+++ b/Cyber/Cyber.html
@@ -301,8 +301,12 @@ Permet de scanner les port (<strong style="font-size: 1.5em;">N</strong><span st
         }
         function encodeCesarUTF8(text, shift) {
           // const text = 'Texte_TesteCesar_2abcABC';
-          var array = ['a', 'b', 'c'];
-          
+          var array = [" " ,"!", "#" ,"$" ,"%" ,"&" ,"'" ,"(" ,")" ,"*" ,"+" ,"," ,"-" ,"." ,"/" ,"0" ,"1" ,"2" ,"3" ,"4" ,"5" ,"6" ,"7" ,"8" ,"9" ,":" ,";" ,"<" ,"=" ,">" ,"?" ,"@" ,"A" ,"B" ,"C" ,"D" ,"E" ,"F" ,"G" ,"H" ,"I" ,"J" ,"K" ,"L" ,"M" ,"N" ,"O" ,"P" ,"Q" ,"R" ,"S" ,"T" ,"U" ,"V" ,"W" ,"X" ,"Y" ,"Z" ,"[" ,"]" ,"^" ,"_" ,"a" ,"b" ,"c" ,"d" ,"e" ,"f" ,"g" ,"h" ,"i" ,"j" ,"k" ,"l" ,"m" ,"n" ,"o" ,"p" ,"q" ,"r" ,"s" ,"t" ,"u" ,"v" ,"w" ,"x" ,"y" ,"z" ,"{" ,"|" ,"}"];
+          _debug = true
+          if(_debug){console.log("encodeCesarUTF8 debuggage")}
+          if(_debug){console.log(text)}
+          if(_debug){console.log(shift)}
+
         }
         var alphabet = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ';
         function encodeCaesar(msg, n, Decodage) {
