On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   Cyber/Cyber.html

--- a/Cyber/Cyber.html
+++ b/Cyber/Cyber.html
@@ -275,11 +275,11 @@ Permet de scanner les port (<strong style="font-size: 1.5em;">N</strong><span st
           const inputCesar = document.getElementById(inputCesarStr).value;
           console.log('inputCesar : ');console.log(inputCesar)
           console.log('cle : ');console.log(cle)
-          const CesarStr = encodeCesarUTF8(inputCesar, cle);
+          const CesarStr = encodeCesarUTF8(inputCesar, -cle);
           console.log(CesarStr);
           document.getElementById("outputCesar0_2").innerHTML = `Encryptée : `;
           document.getElementById("outputCesar_2").innerHTML = `|${CesarStr}|`;
-          document.getElementById("outputCesar2_2").innerHTML = `|${encodeCesarUTF8(CesarStr, -cle)}|`;
+          document.getElementById("outputCesar2_2").innerHTML = `|${encodeCesarUTF8(CesarStr, cle)}|`;
         }
         function testInputCesar2(cleStr="inputMCesar",inputCesarStr="outputCesar") {
           const cle = document.getElementById(cleStr).value;
@@ -300,27 +300,26 @@ Permet de scanner les port (<strong style="font-size: 1.5em;">N</strong><span st
           document.getElementById("outputCesar0").innerHTML = `Encryptée : `;
           document.getElementById("outputCesar").innerHTML = `|${CesarStr}|`;
         }
-        function encodeCesarUTF8(text="Texte_TesteCesar_2abcABC", shift=0) {
-          // const text = 'Texte_TesteCesar_2abcABC';
-          var array = ["A", "B", "C", "D", "E", "F", "G", "H", "I", "J", "K", "L", "M", "N", "O", "P", "Q", "R", "S", "T", "U", "V", "W", "X", "Y", "Z",
+        var arrayCharset = ["A", "B", "C", "D", "E", "F", "G", "H", "I", "J", "K", "L", "M", "N", "O", "P", "Q", "R", "S", "T", "U", "V", "W", "X", "Y", "Z",
             "a", "b", "c", "d", "e", "f", "g", "h", "i", "j", "k", "l", "m", "n", "o", "p", "q", "r", "s", "t", "u", "v", "w", "x", "y", "z",
             "_", "2"
           ];
+        function encodeCesarUTF8(text="Texte_TesteCesar_2abcABC", shift=0) {
+          // const text = 'Texte_TesteCesar_2abcABC';
+          
           _debug = true
           if(_debug){console.log("encodeCesarUTF8 debuggage")}
           if(_debug){console.log(text)}
           if(_debug){console.log(shift)}
-          if(_debug){console.log(array)}
+          if(_debug){console.log(arrayCharset)}
 
           var result = "";
           for (var i = 0; i < text.length; i++) {
-            var charIndex = array.indexOf(text[i]);
+            var charIndex = arrayCharset.indexOf(text[i]);
             if (charIndex !== -1) {
-              var newIndex = (charIndex + shift) % array.length;
-              if (newIndex < 0) {
-                newIndex += array.length;
-              }
-              result += array[newIndex];
+              var newIndex = (charIndex +arrayCharset.length+ shift) % arrayCharset.length;
+              if (newIndex == -0) {newIndex=+0;console.log("bug -0");console.log(newIndex)}
+              result += arrayCharset[newIndex];
             } else {
               if(_debug){console.log("not found : "+text[i])}
               result += text[i];
