Move js to js file On branch Js Your branch is up to date with 'origin/Js'.
Changes to be committed:
	modified:   Cyber/Cyber.html
	modified:   Cyber/Cyber.js

--- a/Cyber/Cyber.html
+++ b/Cyber/Cyber.html
@@ -268,7 +268,8 @@ Permet de scanner les port (<strong style="font-size: 1.5em;">N</strong><span st
     <footer class="kaliSVG">
         © Raykesh 2024. All rights reserved.
     </footer>
-    <script charset="UTF-8">
+    <script src="./Cyber.js" charset="UTF-8"></script>
+    <!-- <script charset="UTF-8">
         // TODO
         console.log("test");
         function testInputCesar_3(cleStr="inputMCesar_2",inputCesarStr="inputT_2") {
@@ -429,7 +430,9 @@ Permet de scanner les port (<strong style="font-size: 1.5em;">N</strong><span st
             "a", "b", "c", "d", "e", "f", "g", "h", "i", "j", "k", "l", "m", "n", "o", "p", "q", "r", "s", "t", "u", "v", "w", "x", "y", "z",
             "_", "2"
           ];
-        </script>
+    </script> -->
+
+    
 </body>
 
 
