"Added new HTML element and JavaScript code to filter and process arrayCharset, and updated script tag in HTML file."

--- a/Cyber/Cyber.html
+++ b/Cyber/Cyber.html
@@ -253,6 +253,7 @@ Permet de scanner les port (<strong style="font-size: 1.5em;">N</strong><span st
             
             <span id="outputCesarSpe_2"><span id="outputCesar0_2"></span><span id="outputCesar_2">Texte</span></span><br>
             <button onclick="">déhiffrer</button><br>
+            <span id="outputCesarFilter" style="display: inline"></span><br>
             Décryptée : <div id="outputCesar2_2" style="display: inline">Texte</div><br>
         </div>
         <br>
@@ -268,7 +269,7 @@ Permet de scanner les port (<strong style="font-size: 1.5em;">N</strong><span st
     <footer class="kaliSVG">
         © Raykesh 2024. All rights reserved.
     </footer>
-    <script src="./Cyber.js" charset="UTF-8"></script>
+    <script async defer type="module" src="./Cyber.js" charset="UTF-8"></script>
 
 </body>
 
