"Removed 'type="module"' from script tag in Cyber.html and commented out a block of code in Cyber.js"

--- a/Cyber/Cyber.html
+++ b/Cyber/Cyber.html
@@ -269,7 +269,7 @@ Permet de scanner les port (<strong style="font-size: 1.5em;">N</strong><span st
     <footer class="kaliSVG">
         © Raykesh 2024. All rights reserved.
     </footer>
-    <script async defer type="module" src="./Cyber.js" charset="UTF-8"></script>
+    <script async defer src="./Cyber.js" charset="UTF-8"></script>
 
 </body>
 
