"Added new button and functionality to Cyber.html and Cyber.js files, including a testInput_F function that performs Caesar cipher encoding and XOR encryption."

--- a/Cyber/Cyber.html
+++ b/Cyber/Cyber.html
@@ -257,6 +257,8 @@ Permet de scanner les port (<strong style="font-size: 1.5em;">N</strong><span st
             Décryptée : <div id="outputCesar2_2" style="display: inline">Texte</div><br>
         </div>
         <br>
+        La cerise sur le gâteaux : <br>
+        <button onclick="testInput_F()">Cliquer</button><br>
         <label for="TestTexteArea">.</label>
         <textarea name="Exemple" id="TestTexteArea" cols="30" rows="10">TODO</textarea><br>
 
