--- a/Cyber/Cyber.html
+++ b/Cyber/Cyber.html
@@ -258,9 +258,9 @@ Permet de scanner les port (<strong style="font-size: 1.5em;">N</strong><span st
         </div>
         <br>
         La cerise sur le gâteaux : <br>
-        <button onclick="testInput_F()">Cliquer</button><br>
+        <button onclick="testInput_F2()">Cliquer</button><br>
         <label for="TestTexteArea">.</label>
-        <textarea name="Exemple" id="TestTexteArea" cols="30" rows="10">TODO</textarea><br>
+        <textarea name="Exemple" id="TestTexteArea" cols="30" rows="10"></textarea><br>
 
         <h3 id="Item3">Item 3</h3>    
         </section>
