Chiffrage et déchiffrage
On branch Js
Your branch is up to date with 'origin/Js'.

Changes to be committed:
	modified:   Cyber/Cyber.html
	modified:   Cyber/Cyber.js

--- a/Cyber/Cyber.html
+++ b/Cyber/Cyber.html
@@ -260,7 +260,7 @@ Permet de scanner les port (<strong style="font-size: 1.5em;">N</strong><span st
         La cerise sur le gâteaux : <br>
         <button onclick="testInput_F2()">Cliquer</button><br>
         <label for="TestTexteArea">.</label>
-        <textarea name="Exemple" id="TestTexteArea" cols="30" rows="10"></textarea><br>
+        <textarea name="Exemple" id="TestTexteArea" cols="30" rows="10">Texte_test_abcdyxz_ABS_XYZ_0123456789</textarea><br>
 
         <h3 id="Item3">Item 3</h3>    
         </section>
