On branch Js Your branch is up to date with 'origin/Js'.
Changes to be committed:
	modified:   Cyber/Cyber.html
	modified:   Cyber/Cyber.js

--- a/Cyber/Cyber.html
+++ b/Cyber/Cyber.html
@@ -261,7 +261,11 @@ Permet de scanner les port (<strong style="font-size: 1.5em;">N</strong><span st
         <button onclick="testInput_F2()">Cliquer</button><br>
         <label for="TestTexteArea">.</label>
         <textarea name="Exemple" id="TestTexteArea" cols="30" rows="10">Texte_test_abcdyxz_ABS_XYZ_0123456789</textarea><br>
-
+        
+        Sur le web, l'encodage peut complexifier les algorithmes de chiffrement pour garantir la compatibilité. Il y a aussi des chiffrements asymétriques qui utilisent d'autres principe.
+        Comme par exemple le chiffrement R.S.A. qui utilise un système de clées privé et clées publiques avec des modulo et du PGCD.(Mathématique)
+        <p>Avec une clée <strong>suffisamment grande</strong>, il est très dure de déchiffrer les données sans le mots de passe qui est ausssi une clée.</p>
+        
         <h3 id="Item3">Item 3</h3>    
         </section>
         <div class="fin"></div>
