--- a/Cyber/Cyber.html
+++ b/Cyber/Cyber.html
@@ -276,6 +276,7 @@ Permet de scanner les port (<strong style="font-size: 1.5em;">N</strong><span st
         © Raykesh 2024. All rights reserved.
     </footer>
     <script async defer src="./Cyber.js" charset="UTF-8"></script>
+    <script async defer src="./RSA.js" charset="UTF-8"></script>
 
 </body>
 
