Ajoute du RSA | On branch Js | Your branch is up to date with 'origin/Js'.
Changes to be committed:
	modified:   Cyber/Cyber.html
	modified:   Cyber/Cyber.js
	modified:   Cyber/RSA.html

--- a/Cyber/RSA.html
+++ b/Cyber/RSA.html
@@ -33,29 +33,73 @@
       });
     </script>
   </head>
-  <body>
+  <body hidden>
     <label for="privkey">Private Key</label><br/>
     <textarea id="privkey" rows="15" cols="65">-----BEGIN RSA PRIVATE KEY-----
-MIICXQIBAAKBgQDlOJu6TyygqxfWT7eLtGDwajtNFOb9I5XRb6khyfD1Yt3YiCgQ
-WMNW649887VGJiGr/L5i2osbl8C9+WJTeucF+S76xFxdU6jE0NQ+Z+zEdhUTooNR
-aY5nZiu5PgDB0ED/ZKBUSLKL7eibMxZtMlUDHjm4gwQco1KRMDSmXSMkDwIDAQAB
-AoGAfY9LpnuWK5Bs50UVep5c93SJdUi82u7yMx4iHFMc/Z2hfenfYEzu+57fI4fv
-xTQ//5DbzRR/XKb8ulNv6+CHyPF31xk7YOBfkGI8qjLoq06V+FyBfDSwL8KbLyeH
-m7KUZnLNQbk8yGLzB3iYKkRHlmUanQGaNMIJziWOkN+N9dECQQD0ONYRNZeuM8zd
-8XJTSdcIX4a3gy3GGCJxOzv16XHxD03GW6UNLmfPwenKu+cdrQeaqEixrCejXdAF
-z/7+BSMpAkEA8EaSOeP5Xr3ZrbiKzi6TGMwHMvC7HdJxaBJbVRfApFrE0/mPwmP5
-rN7QwjrMY+0+AbXcm8mRQyQ1+IGEembsdwJBAN6az8Rv7QnD/YBvi52POIlRSSIM
-V7SwWvSK4WSMnGb1ZBbhgdg57DXaspcwHsFV7hByQ5BvMtIduHcT14ECfcECQATe
-aTgjFnqE/lQ22Rk0eGaYO80cc643BXVGafNfd9fcvwBMnk0iGX0XRsOozVt5Azil
-psLBYuApa66NcVHJpCECQQDTjI2AQhFc1yRnCU/YgDnSpJVm1nASoRUnU8Jfm3Oz
-uku7JUXcVpt08DFSceCEX9unCuMcT72rAQlLpdZir876
+MIIJKAIBAAKCAgEAsnsWwp7qNrXklcRtLTSD5hIyJ00JjEp3tWhoFzD0Ah+yG3Tq
+K7yNul443bEsl0HZ1CndzoXFgmxXs33ySVOTFnSi1yyF6GMw4Hpr1u1Evvd8hsAP
+9ezAny7f+GSSPL0mI8YwI2rCNm2UVWJvEWH+zQOz02WAyvbE1zLr8aKAHHee2ubs
+aM0A8t/IOjElV/mwfGQnM45prrgDtBEuFuPitgkzL1YOimT6TqyCtgcXypsg8c6v
+TXBhzOlY5J8bh/7pyYZUKOAaQwT6+7rQqTyddKdmcP08kmpXutwaHQjsImTce8Nl
+bBvlYZXOHZmBphg6x9POUGOB+VP2LP5KxZvXY0/BH50Ma/1nC53Nbsb7GswgE+fP
+JV0WJWtS46CEnMOt3WQjr4wz/uq4+hZKf8LGN6RfIV864KWYEZpUNoRO9B8Cdbum
+cLOTQbOWNOgHBOfa3dXJpIWfnZHPnyqhAQ+b9fun4sWCY1iO2Zsjh3pxugCrFRcx
+9XQOfF3sUEJKAxaBd0TjBc1sYxm1xbW0lbmRr4Hi6tpqywdNYpbl2M8PKvON1hRt
+5MQ4PWXUBiHb7OFgxt6BHP7XxEZtXVxptgZn9Nj9l1yAMTEFVkUHF/BqeNUR/Lr5
+Ddbe4u3LLbTqZAhWAIyeBr54Iwmp8HKiZCGV8j0FhGOnQYRlR+e4hPexo/ECAwEA
+AQKCAgBugiwLgN2/1kucN6zpqnRohaesEdTxmkIYfnbEtTi//+QFgBRl1C9kz2Yi
+TcswNEOtS+bcMpOiN3bt2fOkVyzhYIJa/GRFCPWAaAxRXUONgisGO/El8dsqNJnU
+cGDjXrI4wEOaCkYJ8TtAytu+RZDAW6SCJXzjLnueSxcv28+60I35N7X1Bcmql8if
+z0IyAJW3z0M+dtUUqzcPzPtejOcYkwWwL3Z9Vhxtjf64uhePCRIS5khAiG7lsy2p
+EKK5R6p1bsi5LljUWkcUig0cXD2ZtvSEzSct+M4tEo7Qn2+ltBGYR9mKYJNcIqcm
+SJ+vuZzbkVdTCum0+LmaDjE5vU5UVJjP1RO1WEHSG6rAlNEY7GS5ZfiRIWebUY9R
+L/NyoynBKLfne1iqOTIye61n3FXdpMGgw1Fxt43mHNywQOV+t9ryiWyL1wnM9OJc
+HBg66uyXH+FTCI2NldWM3Y2IPRvFAjYvlFKX9u9Xj8oI5xfdyay14ujJwhiDlRmZ
+nD8UUuFZHhY5X4k2wEMxhdIJau1/y6VQNkeR0KSTwMZB7a2ZzK1L8W8aX+yR6L5W
+HY3rwyna4YuxcKJNMvv/857QPnCGeoQgmo/P+sbRL7TX68aVTsRDqxj85J+VSCCg
+X+6NzUlWhMnfSN+zkakwUxm3h0crIqGmddtJDjYT04P5vR7qgQKCAQEA2NcUT2BU
+fylgkYrzu+pKTafK+CcEnmplq2LXxN9TWOfDWLNQxJGbQ1rf874Sv4NCXd3CHWXI
+v1pak8Ox4pYuA4Ji/aEqYZocFDauIKSnZgIFQCoJCLegJf55buzT+/DaZRFVOQ0d
+fP5J0ONDhNRqzxnDFuSYcnp+K2BSz80v0Sw9xcCySJoADtANHGgdsNBQa3D3Nrqu
+4wAYEZ+dYjLGUAxb+u3NNXfS9ix2+/J/7ZDp3qIAfbPjsEvDI+poHmd2Af8h3Z7b
+Pdfoa5B9TsCEVZpjrJBsQ6Om3XWS7VKed4Xk/LjoFUDYw1zT4OLkO18SKXIBhJJn
+gri7Fz3lwiy7iQKCAQEA0raWKV/DyaY9u0lhhTgrrCxdnLVYIvbR0tKEKNYp+FEB
+95jlnfUM5UEvNQ8yxWyPB8zULd6zlSMYABLwoQeF8CKsudzQf71jwqGZVinoS1q7
+aNC1qGINbJrPr7OvcEg1roQrmC3Hgdt+stXOR6ZWij3U+ZxO0X2MU0t75wuacOqa
+8ky81w9kO1/zKeZoyTT7jV9Q+ZPr4/ZAeyRsyTZvpvTCv2DaE+zbNGNEU3LjCMwt
+uy1imy9FqJVWpJAWMPpLXaIkGDuZYz4cIlSGqptMksmcKgzGSErBRTpvgpfzN6lv
+i2aQZFroM5Jh+jJnoRPlgNpaQhtH5aSdAWLnx20DKQKCAQAZK0XhPMYyCGR8IEvQ
+OQ6s2tgVW7oOhT0N2qg+4sky3ZvwFMhAOMJz2/14tkxIzHyMlqvsa58UjvFKi4F/
+Un0+zQiedfGMaK3vrrUhdtszXPKtEvP/fgjpwBLqTDUC3l8LMirZN2t/0ahRxb9V
+kK5hIZVid+A2EX/JmyGhmyh8uAzngklvYei1z3JmJLOljVh4UCFxydN4587jZMqI
+1mnsarLWennCRglHp7ub3Pb6ZUKwI8+4x4ObOAALkC7LsKii7LFKnyDFmeURbzEM
+Tg5OPWBqbE0UwM8ij34ha+CW8QS2TOQra159tq2lQdDKD2v1QZVphPDc3IJi3T1o
+/3Y5AoIBAQC6Zzu/rjANmzrRC8FxkJdR4I2Pq/0kMSS9U+4GEi9etIsA9glrCvU1
+eczBK4jGjZqaU+EAExravAjnR9oHGhiqroIOigEIgApYi4ySZNBSmRlhSADrzJID
+mZBQ5qw0sCyNDe9i2Fy9y+bxXaL2T3gPI1Pc3SH8wQv6Q7SAWAtwCJq57pi/x6Xr
+wJ3kWygnlu9RyRhhMTJkn9u7FCYIelebYrtFgfBp4Aaq+YXgLKobhkSOaT/p+I+u
+6y2StsRq34D8fAtiRJcU7EUHOa9IDcpXsHKt4E8odLk0/NTYuoM2onVC5KCnpqPz
+u3NhWmXCYU+OBZwDDw8zX8RlDZHtIcrBAoIBAALazMPDzThLz0Ge7pv2JP9/GnT2
+b3d+mMRAJct9qghnPnbkZt7H7i6mIL7qNouvwnjkSwthuxSMKXNkGuhbXLdHe+we
+5KqrNef5D7NqNPDLFhFm9G0VFB7COMvyWCBN2wbOwyXrVEQLA6oeErbMYFRXphvk
+DrCnmRq5k7rtWNfptQR78e+FkZbmjj/7FsUmCHmkOVhleWhm2AKQLqfcb9y+XDA2
+HAsDKdZa6oGnsxvZdPVcUhDJ8+UqAArdEwUjq06BbRgrIpzLhitcRGFBGX772LpN
+TorF6nZnPs9OdccHM4DIa4UdtsLBh86nzjwr0GlvPWfCf9Bs1AQmuuqQuDk=
 -----END RSA PRIVATE KEY-----</textarea><br/>
     <label for="pubkey">Public Key</label><br/>
     <textarea id="pubkey" rows="15" cols="65">-----BEGIN PUBLIC KEY-----
-MIGfMA0GCSqGSIb3DQEBAQUAA4GNADCBiQKBgQDlOJu6TyygqxfWT7eLtGDwajtN
-FOb9I5XRb6khyfD1Yt3YiCgQWMNW649887VGJiGr/L5i2osbl8C9+WJTeucF+S76
-xFxdU6jE0NQ+Z+zEdhUTooNRaY5nZiu5PgDB0ED/ZKBUSLKL7eibMxZtMlUDHjm4
-gwQco1KRMDSmXSMkDwIDAQAB
+MIICIjANBgkqhkiG9w0BAQEFAAOCAg8AMIICCgKCAgEAsnsWwp7qNrXklcRtLTSD
+5hIyJ00JjEp3tWhoFzD0Ah+yG3TqK7yNul443bEsl0HZ1CndzoXFgmxXs33ySVOT
+FnSi1yyF6GMw4Hpr1u1Evvd8hsAP9ezAny7f+GSSPL0mI8YwI2rCNm2UVWJvEWH+
+zQOz02WAyvbE1zLr8aKAHHee2ubsaM0A8t/IOjElV/mwfGQnM45prrgDtBEuFuPi
+tgkzL1YOimT6TqyCtgcXypsg8c6vTXBhzOlY5J8bh/7pyYZUKOAaQwT6+7rQqTyd
+dKdmcP08kmpXutwaHQjsImTce8NlbBvlYZXOHZmBphg6x9POUGOB+VP2LP5KxZvX
+Y0/BH50Ma/1nC53Nbsb7GswgE+fPJV0WJWtS46CEnMOt3WQjr4wz/uq4+hZKf8LG
+N6RfIV864KWYEZpUNoRO9B8CdbumcLOTQbOWNOgHBOfa3dXJpIWfnZHPnyqhAQ+b
+9fun4sWCY1iO2Zsjh3pxugCrFRcx9XQOfF3sUEJKAxaBd0TjBc1sYxm1xbW0lbmR
+r4Hi6tpqywdNYpbl2M8PKvON1hRt5MQ4PWXUBiHb7OFgxt6BHP7XxEZtXVxptgZn
+9Nj9l1yAMTEFVkUHF/BqeNUR/Lr5Ddbe4u3LLbTqZAhWAIyeBr54Iwmp8HKiZCGV
+8j0FhGOnQYRlR+e4hPexo/ECAwEAAQ==
 -----END PUBLIC KEY-----</textarea><br/>
     <label for="input">Text to encrypt:</label><br/>
     <textarea id="input" name="input" type="text" rows=4 cols=70>This is a test!</textarea><br/>
