--- a/Cyber/Cyber.html
+++ b/Cyber/Cyber.html
@@ -800,5 +800,5 @@ function xorEncrypt(str, key) {
 </html>
         <script type="module" src="./utf8StringToSha256Hash.js">
         </script>
-        <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
-        <script src="jsencrypt.min.js"></script>
+        <!-- <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script> -->
+        <!-- <script src="jsencrypt.min.js"></script> -->
