On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   Cyber/Cyber.html

--- a/Cyber/Cyber.html
+++ b/Cyber/Cyber.html
@@ -351,7 +351,7 @@ r4Hi6tpqywdNYpbl2M8PKvON1hRt5MQ4PWXUBiHb7OFgxt6BHP7XxEZtXVxptgZn
     <footer class="kaliSVG">
         © Raykesh 2024. All rights reserved.
     </footer>
-    <script async defer src="./Cyber.js" charset="UTF-8">
+    <script charset="UTF-8">
     
 console.log("test");
 
