--- a/Cyber/Cyber.html
+++ b/Cyber/Cyber.html
@@ -360,19 +360,19 @@ r4Hi6tpqywdNYpbl2M8PKvON1hRt5MQ4PWXUBiHb7OFgxt6BHP7XxEZtXVxptgZn
         // import * as nom2 from "jsencrypt.min.js";
 
 
-        $(function() {
-            // Call this code when the page is done loading.
-            $('#testme').click(function() {// Run a quick encryption/decryption when they click.
-            var encrypt = new JSEncrypt();
-            encrypt.setPublicKey($('#pubkey').val());
-            // var encrypted = encrypt.encrypt($('#input').val());// Encrypt with the public key...
-            var decrypt = new JSEncrypt();
-            decrypt.setPrivateKey($('#privkey').val());
-            // var uncrypted = decrypt.decrypt(encrypted);// Decrypt with the private key...
-            // if (uncrypted == $('#input').val()) {console.log('It works!!!');}else {console.log('Something went wrong....');}// Now a simple check to see if the round-trip worked.
-            document.getElementById("input").innerHTML = `${decrypt.decrypt($('#input').val())}`;
-            });
-        });
+        // $(function() {
+        //     // Call this code when the page is done loading.
+        //     $('#testme').click(function() {// Run a quick encryption/decryption when they click.
+        //     var encrypt = new JSEncrypt();
+        //     encrypt.setPublicKey($('#pubkey').val());
+        //     // var encrypted = encrypt.encrypt($('#input').val());// Encrypt with the public key...
+        //     var decrypt = new JSEncrypt();
+        //     decrypt.setPrivateKey($('#privkey').val());
+        //     // var uncrypted = decrypt.decrypt(encrypted);// Decrypt with the private key...
+        //     // if (uncrypted == $('#input').val()) {console.log('It works!!!');}else {console.log('Something went wrong....');}// Now a simple check to see if the round-trip worked.
+        //     document.getElementById("input").innerHTML = `${decrypt.decrypt($('#input').val())}`;
+        //     });
+        // });
 
 
 
