--- a/Cyber/Cyber.html
+++ b/Cyber/Cyber.html
@@ -351,6 +351,7 @@ r4Hi6tpqywdNYpbl2M8PKvON1hRt5MQ4PWXUBiHb7OFgxt6BHP7XxEZtXVxptgZn
     <footer class="kaliSVG">
         © Raykesh 2024. All rights reserved.
     </footer>
+    <script async defer src="./Cyber.js" charset="UTF-8"></script>
     <script charset="UTF-8">
             
         console.log("test");
@@ -800,5 +801,5 @@ function xorEncrypt(str, key) {
 </html>
         <script type="module" src="./utf8StringToSha256Hash.js">
         </script>
-        <!-- <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script> -->
-        <!-- <script src="jsencrypt.min.js"></script> -->
+        <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
+        <script src="jsencrypt.min.js"></script>
