--- a/Cyber/Cyber.html
+++ b/Cyber/Cyber.html
@@ -341,7 +341,9 @@ r4Hi6tpqywdNYpbl2M8PKvON1hRt5MQ4PWXUBiHb7OFgxt6BHP7XxEZtXVxptgZn
         Les clés RSA, d'après l'algorithme utilisée ont une partie en commun (un des paramètre) ceux qui peut expliquer qu'une partie de chaque paire de clé est la même. L'algorithme utilisent aussi habilement les nombres premiers pour chiffré les données
         <p>On finira par remarquer la clé privé est plus long que la clé public, c'est pour s'assurer qu'il n'est <strong>presque</strong> pas possible de retrouver une clé privé à partir de la clé public</p>. Si celle-si est suffisamment longue.
         Cette algorithme n'est pas un algorithme permettant une fiabilitée post-Quantique mais des solutions post-Quantique on déjà été proposer.
-
+        <br><br>
+        En cas de bug notamment github : <button onclick="testInput_RSA()"></button><br>
+        
         <h3 id="Item3">Item 3</h3>    
         </section>
         <div class="fin"></div>
@@ -374,6 +376,17 @@ r4Hi6tpqywdNYpbl2M8PKvON1hRt5MQ4PWXUBiHb7OFgxt6BHP7XxEZtXVxptgZn
         //     document.getElementById("input").innerHTML = `${decrypt.decrypt($('#input').val())}`;
         //     });
         // });
+        function testInput_RSA() {
+            //Chiffrement RSA 
+            var encrypt = new JSEncrypt();
+            encrypt.setPublicKey($('#pubkey').val());
+            // var encrypted = encrypt.encrypt($('#input').val());// Encrypt with the public key...
+            var decrypt = new JSEncrypt();
+            decrypt.setPrivateKey($('#privkey').val());
+            // var uncrypted = decrypt.decrypt(encrypted);// Decrypt with the private key...
+            // if (uncrypted == $('#input').val()) {console.log('It works!!!');}else {console.log('Something went wrong....');}// Now a simple check to see if the round-trip worked.
+            document.getElementById("input").innerHTML = `${decrypt.decrypt($('#input').val())}`;
+        }
 
 
 
