"Updated text in Cyber.html: changed 'notamment github' to 'notamment sur github'."

--- a/Cyber/Cyber.html
+++ b/Cyber/Cyber.html
@@ -342,7 +342,7 @@ r4Hi6tpqywdNYpbl2M8PKvON1hRt5MQ4PWXUBiHb7OFgxt6BHP7XxEZtXVxptgZn
         <p>On finira par remarquer la clé privé est plus long que la clé public, c'est pour s'assurer qu'il n'est <strong>presque</strong> pas possible de retrouver une clé privé à partir de la clé public</p>. Si celle-si est suffisamment longue.
         Cette algorithme n'est pas un algorithme permettant une fiabilitée post-Quantique mais des solutions post-Quantique on déjà été proposer.
         <br><br>
-        En cas de bug notamment github : <button onclick="testInput_RSA()"></button><br>
+        En cas de bug, notamment sur github : <button onclick="testInput_RSA()"></button><br>
         
         <h3 id="Item3">Item 3</h3>    
         </section>
