document.getElementById("input").value On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   Cyber/Cyber.html

--- a/Cyber/Cyber.html
+++ b/Cyber/Cyber.html
@@ -380,13 +380,13 @@ r4Hi6tpqywdNYpbl2M8PKvON1hRt5MQ4PWXUBiHb7OFgxt6BHP7XxEZtXVxptgZn
         function testInput_RSA() {
             //Chiffrement RSA 
             var encrypt = new JSEncrypt();
-            encrypt.setPublicKey($('#pubkey').val());
+            encrypt.setPublicKey(document.getElementById("pubkey").value);
             // var encrypted = encrypt.encrypt($('#input').val());// Encrypt with the public key...
             var decrypt = new JSEncrypt();
-            decrypt.setPrivateKey($('#privkey').val());
+            decrypt.setPrivateKey(document.getElementById("privkey").value);
             // var uncrypted = decrypt.decrypt(encrypted);// Decrypt with the private key...
             // if (uncrypted == $('#input').val()) {console.log('It works!!!');}else {console.log('Something went wrong....');}// Now a simple check to see if the round-trip worked.
-            document.getElementById("input").innerHTML = `${decrypt.decrypt($('#input').val())}`;
+            document.getElementById("input").innerHTML = `${decrypt.decrypt(document.getElementById("input").value)}`;
         }
 
 
