--- a/Cyber/Cyber.html
+++ b/Cyber/Cyber.html
@@ -244,7 +244,7 @@ Permet de scanner les port (<strong style="font-size: 1.5em;">N</strong><span st
         </div>
         <br>
         <div><br>
-          avant on avait un charset très court (abc...xyz), or là on a un charset plus grand (	,!#$%&'...𒁚𒁛𒁜)<br>
+          avant on avait un charset très court (abc...xyz), or là on a un charset plus grand (	,!#$%&'...𒁚𒁛𒁜...)<br>
           Chiffrement de césar : <br>
             <input type="number" id="inputMCesar_2" placeholder="Entrer le MDP (nombre de décallage)" value="1"><br>
             <input type="text" id="inputT_2" placeholder="Entrer le Texte" value="Texte_TesteCesar_2abcABC"><br>
